--- a/config.json
+++ b/config.json
@@ -1,4 +1,14 @@
 {
+
+    "python_env": {
+        "venv_path": "C:/Users/iskra_todorova/PowerFolders/CodeTests/venv310/Scripts/python.exe"
+    },
+    "task_paths": {
+        "visual_oddball": "C:/Users/iskra_todorova/Desktop/locusmental_wp1_tasks/visual_oddball.py",
+        "cued_visual_search": "C:/Users/iskra_todorova/Desktop/locusmental_wp1_tasks/cued-visual-search-animation.py",
+        "auditory_oddball": "C:/Users/iskra_todorova/Desktop/locusmental_wp1_tasks/auditory_oddball.py",
+        "rapid_sound_sequences": "C:/Users/iskra_todorova/Desktop/locusmental_wp1_tasks/rapid-sound-sequences.py"
+    },
     "constants": {
         "monitor": {
             "name": "Iskra_monitor_204",
@@ -13,7 +23,7 @@
             "Lib":"ptb"
         },
         "eyetracker": {
-            "testmode": false,
+            "testmode": true,
             "sampling_rate": 60,
             "device": "Tobii Pro Spark"
          },
@@ -26,15 +36,15 @@
         "dialog_screen": 1
     },
     "tasks": {
-        "rapid-sound-sequences": {
+        "auditory-oddball": {
             "logging": {
-                "base_path": "data/rapid_sound_sequences",
+                "base_path": "data/auditory_oddball",
                 "log_folder": "logging_data"
             },
             "data_paths": {
-                "trials": "data/rapid_sound_sequences/trialdata",
-                "eyetracking": "data/rapid_sound_sequences/eyetracking",
-                "logging": "data/rapid_sound_sequences/logging_data"
+                "trials": "data/auditory_oddball/trialdata",
+                "eyetracking": "data/auditory_oddball/eyetracking",
+                "logging": "data/auditory_oddball/logging_data"
             }
         },
         "cued-visual-search": {
@@ -48,17 +58,17 @@
                 "logging": "data/visual_search_task/logging_data"
             }
         },
-        "auditory-oddball": {
+        "rapid-sound-sequences": {
             "logging": {
-                "base_path": "data/auditory_oddball",
+                "base_path": "data/rapid_sound_sequences",
                 "log_folder": "logging_data"
             },
             "data_paths": {
-                "trials": "data/auditory_oddball/trialdata",
-                "eyetracking": "data/auditory_oddball/eyetracking",
-                "logging": "data/auditory_oddball/logging_data"
+                "trials": "data/rapid_sound_sequences/trialdata",
+                "eyetracking": "data/rapid_sound_sequences/eyetracking",
+                "logging": "data/rapid_sound_sequences/logging_data"
             }
-        },
+        },        
         "visual-oddball": {
             "logging": {
                 "base_path": "data/visual_oddball",
